Upgraded springboot-starter-parent version and setup springdoc openapi swagger ui setup